roar-k8s/roar-complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: roar-web
  name: roar-web
  namespace: roar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roar-web
  template:
    metadata:
      labels:
        app: roar-web
    spec:
      containers:
      - image: quay.io/techupskills2/roar-web:1.0.0
        imagePullPolicy: Always
        name: roar-web
        ports:
        - containerPort: 8080
          name: web
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roar-web
  name: roar-web
  namespace: roar
spec:
  ports:
  - name: frontend
    port: 8089
    targetPort: 8080
  selector:
    app: roar-web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: roar-db
  name: mysql
  namespace: roar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roar-db
  template:
    metadata:
      labels:
        app: roar-db
        name: mysql
    spec:
      containers:
      - name: mysql
        image: quay.io/techupskills2/roar-db:1.0.0
        imagePullPolicy: Always
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roar-db
  name: mysql
  namespace: roar
spec:
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    name: mysql
